--- a/src/App.css
+++ b/src/App.css
@@ -80,5 +80,21 @@
 }
 
 .folders {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  border: 4px solid black;
+}
+
+.recipe-folder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 4px solid red;
+}
+
+.archived-folder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border: 4px solid red;
 }
