--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
-  text-align: center;
-  background-color: greenyellow; 
+  text-align: center; 
 }
 
 .App-logo {
@@ -40,6 +39,11 @@
 .zuckie {
   height: 60px; 
   width: 150px;
+}
+
+.folder-pic {
+  height: 60px;
+  width: 60px;
 }
 
 .goog {
@@ -82,19 +86,16 @@
 .folders {
   display: flex;
   flex-direction: column;
-  border: 4px solid black;
 }
 
 .recipe-folder {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border: 4px solid red;
 }
 
 .archived-folder {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border: 4px solid red;
 }
