--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
 .App {
   text-align: center;
   background-color: greenyellow; 
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  color: white;
 }
 
 .App-header {
@@ -16,15 +12,19 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .nav-bar {
   background-color: blue; 
 }
 
+.login-field {
+  padding: 20px;
+  margin: 20px;
+}
+
 .social-login {
-  margin: 100px;
+  margin: 50px;
   padding: 20px;
 }
 
@@ -45,6 +45,10 @@
 .goog {
   height: 40px; 
   width: 150px;
+}
+
+.logged-in-user {
+  border-bottom: solid 2px black;
 }
 
 .action-buttons {
@@ -71,19 +75,17 @@
   border-radius: 50%
 }
 
-.logged-in-user {
-  border-bottom: solid 2px black;
-}
-
 .active-lists {
   border-bottom: solid 2px black;
+  padding: 10px;
+}
+
+.listbutt {
+  margin: 5px;
+  background-color: #282c34;
+  color: white; 
 }
 
 .folders {
   padding: 20px;
-}
-
-.login-field {
-  padding: 50px;
-  margin: 50px;
 }
