login work, some style

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: greenyellow; 
+  background-color: rgb(25, 168, 20); 
   color: white;
   text-align: center; 
 }
