--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,8 @@ input[type="password"] {
   display: flex;
   flex-direction: row;
   align-items: center;
+  /* justify-content: center; */
   /* border: black 1px solid; */
-  text-align: center;
   margin-bottom: 10px;
 }
 
@@ -163,7 +163,7 @@ input[type="password"] {
 }
 
 .active-lists {
-  /* border-bottom: solid 2px lightgray; */
+  border-bottom: solid 2px lightgray;
   padding: 10px;
 }
 
@@ -187,6 +187,7 @@ input[type="password"] {
   flex-direction: column;
 }
 
+.archived-folder,
 .recipe-folder {
   display: flex;
   flex-direction: row;
@@ -194,10 +195,10 @@ input[type="password"] {
   /* border: black 1px solid; */
 }
 
+/*
 .archived-folder {
   display: flex;
   flex-direction: row;
   justify-content: left;
-  height: 25px;
-  /* border: black 1px solid; */
-}
+  border: black 1px solid; 
+}*/
