--- a/src/App.css
+++ b/src/App.css
@@ -203,15 +203,14 @@ input[type="password"] {
   border: black 1px solid; 
 }*/
 
-.newListButton {
+.new-list-pop-up {
   width: 70px;
   height: 70px;
-  border-radius: 50%;
   border: 5px solid black;
 }
 
-.new-list-pop-up {
-  height: 100px;
-  width: 100px;
-  border: 5px solid black;
+.new-list-button {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
 }
