--- a/src/App.css
+++ b/src/App.css
@@ -204,9 +204,16 @@ input[type="password"] {
 }*/
 
 .new-list-pop-up {
-  width: 70px;
-  height: 70px;
-  border: 5px solid black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 200px;
+  border: 3px solid #73AD21;
+  transform: translate(-50%, -50%);
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .new-list-button {
