--- a/src/App.css
+++ b/src/App.css
@@ -221,3 +221,13 @@ input[type="password"] {
   height: 70px;
   border-radius: 50%;
 }
+
+.cancel-button {
+  height: 30px;
+  width: 60px;
+}
+
+.submit-button {
+  height: 30px;
+  width: 60px;
+}
