new folder button

--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,26 @@ input[type="password"] {
   flex-direction: column;
 }
 
+.new-folder-pop-up {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 200px;
+  border: 3px solid #73AD21;
+  transform: translate(-50%, -50%);
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .new-list-button {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.new-folder-button {
   width: 70px;
   height: 70px;
   border-radius: 50%;
