CreateList - Broken down into individual components.

--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,11 @@ input[type="password"] {
   /* border: black 1px solid; */
 }
 
+.title-bar {
+  display: flex;
+  flex: row;
+}
+
 /*
 .archived-folder {
   display: flex;
@@ -202,10 +207,3 @@ input[type="password"] {
   justify-content: left;
   border: black 1px solid; 
 }*/
-
-.title-input-field {
-  font-size: 2em;
-  border: none;
-  background-color: none;
-  width: 98%;
-}
