--- a/src/App.css
+++ b/src/App.css
@@ -233,12 +233,18 @@ input[type="password"] {
   width: 70px;
   height: 70px;
   border-radius: 50%;
+  position: fixed;
+  bottom: 15%;
+  right: 20%;
 }
 
 .new-folder-button {
   width: 70px;
   height: 70px;
   border-radius: 50%;
+  position: fixed;
+  bottom: 15%;
+  right: 5%;
 }
 
 .cancel-button {
@@ -249,4 +255,13 @@ input[type="password"] {
 .submit-button {
   height: 30px;
   width: 60px;
+}
+
+.show-buttons {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 3%;
+    right: 12%;
 }
