--- a/src/App.css
+++ b/src/App.css
@@ -328,3 +328,40 @@ input[type="password"] {
 .expandedBox {
   border: 5px solid red;
 }
+
+.register {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.regi-name {
+  text-align: center;
+}
+
+.regi-butt {
+  width: 80px;
+  height: 60px;
+  border-radius: 50%;
+  bottom: 15%;
+  right: 5%;
+  margin: 10px;
+  background-color:rgb(64, 182, 66);
+  color: white;
+}
+.regi-butt:hover {
+  background-color:rgb(25, 118, 26);
+  color: white;
+}
+
+.regi-close {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(234, 254, 102); 
+}
+
+.passwordfield {
+  height: 50px;
+  width: 150px;
+}
