--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 html {
-  background: url(img/kawaii-veggies-10pct.png) no-repeat center center fixed;
+  background: url(img/kawaii-veggies-7pct.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
