allows links to pages, displays correctly

--- a/src/App.css
+++ b/src/App.css
@@ -353,3 +353,12 @@ html {
   height: 50px;
   width: 150px;
 }
+
+.sign-here {
+  margin: 10px;
+  background-color:rgb(141, 227, 143);
+  border: 1px solid rgb(145, 25, 25);
+  height: 40px;
+  width: 70px;
+  border-radius: 50%;
+}
