Missing flag updates and highlights an item. Shared lists show up on homepage. Archived button shows how many lists are archived.

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ html {
   /* padding: 20px; */
   margin: 20px;
   text-align: center;
+  /* background-color: rgb(214, 155, 149); */
 }
 
 .login-input,
