--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 html {
-  background: #d1dadb;
+  background: #eceff1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
