UI adjustments for user/shopper.

--- a/src/App.css
+++ b/src/App.css
@@ -387,3 +387,29 @@
   height: 80vh;
   overflow-x: scroll;
 }
+@keyframes jump-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-9px);
+  }
+  35% {
+    transform: translateY(-9px) rotate(7deg);
+  }
+  55% {
+    transform: translateY(-9px) rotate(-7deg);
+  }
+  65% {
+    transform: translateY(-9px) rotate(7deg);
+  }
+  75% {
+    transform: translateY(-9px) rotate(-7deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+.rise-shake {
+  animation: jump-shaking 0.83s infinite;
+}
