--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 /* html {
-  background-color: #e3ede8;
+  background-color: #E2EBE6;
 } */
 
 /* Material UI symbols from the index.html  */
