--- a/src/App.css
+++ b/src/App.css
@@ -362,3 +362,12 @@
   overflow: visible;
   height: 100%;
 }
+
+.homepagelist {
+  display: block;
+  justify-self: left;
+}
+
+/* body::-webkit-scrollbar{
+  display: none;
+} */
